@@ -4,6 +4,7 @@ Wed Jan 25 17:25:45 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>
 
           Add get_discovered_participants, get_discovered_participant_data,
           bit_key_to_repo_id and get_handle testing.
+          Test change of participant, publication and topic qos.
 
 Wed Jan 25 17:01:45 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
